fix: mobile z-index

--- a/src/stylesheets/nav.css
+++ b/src/stylesheets/nav.css
@@ -14,6 +14,7 @@
   left: 0;
   right: 0;
   transition: top 0.2s ease-in-out;
+  z-index: 99999;
 }
 
 #sticky-nav.closed {
